# dspyce

./: .gitignore  .gitlab-ci.yml  CITATION.cff  Collection.py  Community.py  ContentFile.py  DSpace.py  DSpaceObject.py  IIIFContent.py  Item.py  LICENSE  MetaData.py  README.md  Relation.py  __init__.py  mkdocs.yml  pydoc-markdown.yml  pylint-rc.conf  pyproject.toml  requirements.txt
.github/workflows/: release.yml
bitstreams/: Bundle.py  ContentFile.py  IIIFContent.py  __init__.py
docs/: .gitignore  example_copy-items-between-repositories.md  references.md
dspyce/: Collection.py  Community.py  DSpaceObject.py  Item.py  Relation.py  __init__.py  models.py
dspyce/_testing/: .gitignore  __init__.py  bitstreamTest.py  dspyceTest.py  itemTests.py  metadataTests.py  relationTest.py  restTest.py  safTest.py  statisticsTest.py
dspyce/_testing/test_data/saf_item/: collections  (+4 more)
dspyce/bitstreams/: Bitstream.py  Bundle.py  ContentFile.py  IIIFBitstream.py  IIIFContent.py  README.md  __init__.py  models.py
dspyce/entities/: README.md  __init__.py  models.py
dspyce/metadata/: __init__.py  models.py
dspyce/rest/: README.md  RestAPI.py  __init__.py  console.py  exceptions.py  functions.py  models.py
dspyce/saf/: README.md  __init__.py  saf.py  saf_read.py  saf_write.py
dspyce/statistics/: __init__.py  retrieve.py
metadata/: MetaData.py  MetaDataList.py  __init__.py
rest/: Rest.py  RestAPI.py  __init__.py  console.py  converter.py
saf/: ContentFile.py  DSpace.py  IIIFContent.py  README.md  Relation.py  __init__.py  saf.md  saf.py
statistics/: retrieve.py
