[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dspyce"
version = "0.0.6"
authors = [
    {name="Löhden, Eike Martin"}
]
description = "The *dspyce* package helps to communicate with dspace interfaces. Currently saf (Simple Archive Format) packages and the RestAPI are supported."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.0",
    "lxml>=5.0",
    "networkx>=3.3",
    "matplotlib>=3.6"
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/dspace-unimr/dspyce"
Issues = "https://github.com/dspace-unimr/dspyce/issues"
Institution = "https://www.uni-marburg.de/en/ub"